@@ -214,161 +214,8 @@ ${app.server.tomcat.dir}, then run "ant -buildfile build-dist.xml unzip-tomcat".
 		</copy>
 
 		<if>
-			<equals arg1="${app.server.type}" arg2="glassfish" />
-			<then>
-				<loadfile property="domain.xml.content" srcfile="${app.server.glassfish.instance.dir}/config/domain.xml" />
-
-				<antelope:stringutil string="${domain.xml.content}" property="domain.xml.content.index">
-					<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${domain.xml.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.glassfish.instance.dir}/config/domain.xml">
-							<replacetoken><![CDATA[<jvm-options>-Xmx512m</jvm-options>]]></replacetoken>
-							<replacevalue><![CDATA[<jvm-options>-Dfile.encoding=UTF8</jvm-options>
-	<jvm-options>-Djava.net.preferIPv4Stack=true</jvm-options>
-	<jvm-options>-Dorg.apache.catalina.loader.WebappClassLoader.ENABLE_CLEAR_REFERENCES=false</jvm-options>
-	<jvm-options>-Duser.timezone=GMT</jvm-options>
-	<jvm-options>-Xmx1024m</jvm-options>]]></replacevalue>
-						</replace>
-
-						<replace file="${app.server.glassfish.instance.dir}/config/domain.xml">
-							<replacetoken><![CDATA[<jvm-options>-XX:MaxPermSize=192m</jvm-options>]]></replacetoken>
-							<replacevalue><![CDATA[<jvm-options>-XX:MaxPermSize=512m</jvm-options>]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-
-				<loadfile property="server.policy.content" srcfile="${app.server.glassfish.instance.dir}/config/server.policy" />
-
-				<antelope:stringutil string="${server.policy.content}" property="server.policy.content.index">
-					<indexof string="permission javax.security.auth.AuthPermission &quot;doAsPrivileged&quot;;" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${server.policy.content.index}" arg2="-1" />
-					<then>
-						<echo file="${app.server.glassfish.instance.dir}/config/server.policy" append="true">
-							grant {
-								permission java.lang.reflect.ReflectPermission  "suppressAccessChecks";
-								permission javax.security.auth.AuthPermission "doAsPrivileged";
-							};
-						</echo>
-					</then>
-				</if>
-			</then>
-		</if>
-
-		<if>
-			<equals arg1="${app.server.type}" arg2="geronimo" />
-			<then>
-				<if>
-					<not>
-						<available file="${app.server.bin.dir}/setenv.bat" />
-					</not>
-					<then>
-						<copy
-							file="tools/servers/geronimo/bin/setenv.bat"
-							tofile="${app.server.bin.dir}/setenv.bat"
-						/>
-					</then>
-				</if>
-
-				<if>
-					<not>
-						<available file="${app.server.bin.dir}/setenv.sh" />
-					</not>
-					<then>
-						<copy
-							file="tools/servers/geronimo/bin/setenv.sh"
-							tofile="${app.server.bin.dir}/setenv.sh"
-						/>
-					</then>
-				</if>
-
-				<!--<copy todir="${app.server.lib.portal.dir}">
-					<fileset
-						dir="lib/development"
-						includes="saxpath.jar"
-					/>
-				</copy>
-
-				<delete>
-					<fileset
-						dir="${app.server.lib.portal.dir}"
-						includes="commons-logging.jar"
-					/>
-				</delete>-->
-			</then>
-		</if>
-
-		<if>
 			<equals arg1="${app.server.type}" arg2="jboss" />
 			<then>
-				<loadfile property="standalone.conf.content" srcfile="${app.server.bin.dir}/standalone.conf" />
-
-				<antelope:stringutil string="${standalone.conf.content}" property="standalone.conf.content.index">
-					<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${standalone.conf.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.bin.dir}/standalone.conf">
-							<replacetoken><![CDATA[JAVA_OPTS="-Xms64m -Xmx512m -XX:MaxPermSize=256m ]]></replacetoken>
-							<replacevalue><![CDATA[JAVA_OPTS="]]></replacevalue>
-						</replace>
-
-						<echo file="${app.server.bin.dir}/standalone.conf" append="true">
-JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Duser.timezone=GMT -Xmx1024m -XX:MaxPermSize=256m"</echo>
-					</then>
-				</if>
-
-				<loadfile property="standalone.conf.bat.content" srcfile="${app.server.bin.dir}/standalone.conf.bat" />
-
-				<antelope:stringutil string="${standalone.conf.bat.content}" property="standalone.conf.bat.content.index">
-					<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${standalone.conf.bat.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.bin.dir}/standalone.conf.bat">
-							<replacetoken><![CDATA[set "JAVA_OPTS=-Xms64M ]]></replacetoken>
-							<replacevalue><![CDATA[rem set "JAVA_OPTS=-Xms64M ]]></replacevalue>
-						</replace>
-
-						<replace file="${app.server.bin.dir}/standalone.conf.bat">
-							<replacetoken><![CDATA[:JAVA_OPTS_SET]]></replacetoken>
-							<replacevalue><![CDATA[set "JAVA_OPTS=%JAVA_OPTS% -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Duser.timezone=GMT -Xmx1024m -XX:MaxPermSize=256m"
-
-:JAVA_OPTS_SET]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-
-				<loadfile property="standalone.xml.content" srcfile="${app.server.instance.dir}/configuration/standalone.xml" />
-
-				<antelope:stringutil string="${standalone.xml.content}" property="standalone.xml.content.index">
-					<indexof string="jsp-configuration development" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${standalone.xml.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.instance.dir}/configuration/standalone.xml">
-							<replacetoken><![CDATA[<subsystem xmlns="urn:jboss:domain:web:1.1" default-virtual-server="default-host" native="false">]]></replacetoken>
-							<replacevalue><![CDATA[<subsystem xmlns="urn:jboss:domain:web:1.1" default-virtual-server="default-host" native="false">
-								<configuration>
-									<jsp-configuration development="true" />
-								</configuration>]]>
-							</replacevalue>
-						</replace>
-					</then>
-				</if>
-
 				<if>
 					<not>
 						<available file="${app.server.lib.global.dir}/module.xml" />
@@ -395,73 +242,6 @@ JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Dus
 			<then>
 				<if>
 					<not>
-						<available file="${app.server.bin.dir}/run.bat" />
-					</not>
-					<then>
-						<copy
-							file="tools/servers/jetty/bin/run.bat"
-							tofile="${app.server.bin.dir}/run.bat"
-						/>
-
-						<replace file="${app.server.jetty.bin.dir}/run.bat">
-							<replacetoken>set "JAVA_OPTS=-D</replacetoken>
-							<replacevalue>set "JAVA_OPTS=-Dapp.server.jetty.version=${app.server.jetty.version} -Dapp.server.jetty.version.date=${app.server.jetty.version.date} -D</replacevalue>
-						</replace>
-
-						<loadfile property="run.bat.content" srcfile="${app.server.jetty.bin.dir}/run.bat">
-							<filterchain>
-								<expandproperties />
-							</filterchain>
-						</loadfile>
-
-						<echo file="${app.server.jetty.bin.dir}/run.bat">${run.bat.content}</echo>
-					</then>
-				</if>
-
-				<if>
-					<not>
-						<available file="${app.server.bin.dir}/run.sh" />
-					</not>
-					<then>
-						<copy
-							file="tools/servers/jetty/bin/run.sh"
-							tofile="${app.server.bin.dir}/run.sh"
-						/>
-
-						<chmod
-							file="${app.server.bin.dir}/run.sh"
-							perm="a+x"
-						/>
-
-						<replace file="${app.server.jetty.bin.dir}/run.sh">
-							<replacetoken>export JAVA_OPTS="-D</replacetoken>
-							<replacevalue>export JAVA_OPTS="-Dapp.server.jetty.version=${app.server.jetty.version} -Dapp.server.jetty.version.date=${app.server.jetty.version.date} -D</replacevalue>
-						</replace>
-
-						<loadfile property="run.sh.content" srcfile="${app.server.jetty.bin.dir}/run.sh">
-							<filterchain>
-								<expandproperties />
-							</filterchain>
-						</loadfile>
-
-						<echo file="${app.server.jetty.bin.dir}/run.sh">${run.sh.content}</echo>
-					</then>
-				</if>
-
-				<if>
-					<not>
-						<available file="${app.server.bin.dir}/start.ini" />
-					</not>
-					<then>
-						<copy
-							file="tools/servers/jetty/bin/start.ini"
-							tofile="${app.server.bin.dir}/start.ini"
-						/>
-					</then>
-				</if>
-
-				<if>
-					<not>
 						<available file="${app.server.dir}/contexts/root.xml" />
 					</not>
 					<then>
@@ -484,103 +264,6 @@ JAVA_OPTS="$JAVA_OPTS -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Dus
 		<if>
 			<equals arg1="${app.server.type}" arg2="jonas" />
 			<then>
-				<loadfile property="setenv.content" srcfile="${app.server.bin.dir}/setenv" />
-
-				<antelope:stringutil string="${setenv.content}" property="setenv.content.index">
-					<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${setenv.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.bin.dir}/setenv">
-							<replacetoken><![CDATA[export JAVA_OPTS]]></replacetoken>
-							<replacevalue><![CDATA[JAVA_OPTS=-Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Djonas.felix.configuration.file="$JONAS_ROOT/conf/felix-config.properties" -Duser.timezone=GMT -Xmx1024m -XX:MaxPermSize=256m
-export JAVA_OPTS]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-
-				<loadfile property="setenv.bat.content" srcfile="${app.server.bin.dir}/setenv.bat" />
-
-				<antelope:stringutil string="${setenv.bat.content}" property="setenv.bat.content.index">
-					<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${setenv.bat.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.bin.dir}/setenv.bat">
-							<replacetoken><![CDATA[set JONAS_CLASSPATH=%JONAS_BASE%\conf;%JONAS_CLASSPATH%]]></replacetoken>
-							<replacevalue><![CDATA[set JONAS_CLASSPATH=%JONAS_BASE%\conf;%JONAS_CLASSPATH%
-set JAVA_OPTS=-Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Djonas.felix.configuration.file="%JONAS_ROOT%/conf/felix-config.properties" -Duser.timezone=GMT -Xmx1024m -XX:MaxPermSize=256m]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-
-				<loadfile property="classloader-default-filtering.xml.content" srcfile="${app.server.dir}/conf/classloader-default-filtering.xml" />
-
-				<antelope:stringutil string="${classloader-default-filtering.xml.content}" property="classloader-default-filtering.xml.content.index">
-					<indexof string="net.sf.cglib.*" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${classloader-default-filtering.xml.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.dir}/conf/classloader-default-filtering.xml">
-							<replacetoken><![CDATA[<filter-name>org.apache.commons.digester.*</filter-name>]]></replacetoken>
-							<replacevalue><![CDATA[<filter-name>antlr.*</filter-name>
-	<filter-name>EDU.oswego.*</filter-name>
-	<filter-name>javassist.*</filter-name>
-	<filter-name>net.sf.cglib.*</filter-name>
-	<filter-name>net.sf.ehcache.*</filter-name>
-	<filter-name>org.apache.commons.*</filter-name>
-	<filter-name>org.dom4j.*</filter-name>
-	<filter-name>org.hibernate.*</filter-name>
-	<filter-name>org.jboss.*</filter-name>
-	<filter-name>org.objectweb.asm.*</filter-name>
-	<filter-name>org.objectweb.jotm.*</filter-name>
-	<filter-name>org.quartz.*</filter-name>
-	<filter-name>org.springframework.*</filter-name>]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-
-				<if>
-					<not>
-						<available file="${app.server.dir}/conf/felix-config.properties" />
-					</not>
-					<then>
-						<unjar src="${app.server.dir}/lib/bootstrap/felix-launcher.jar" dest="${app.server.dir}/conf">
-							<patternset>
-								<include name="**/default.properties" />
-							</patternset>
-							<chainedmapper>
-								<flattenmapper />
-								<globmapper
-									from="default.properties"
-									to="felix-config.properties"
-								/>
-							</chainedmapper>
-						</unjar>
-
-						<replace file="${app.server.dir}/conf/felix-config.properties">
-							<replacetoken>org.osgi.framework.system.packages=org.osgi.framework;</replacetoken>
-							<replacevalue>org.osgi.framework.system.packages=com.sun.crypto.provider; com.sun.image.codec.jpeg; com.sun.jmx.interceptor; com.sun.jmx.mbeanserver; org.apache.xerces.parsers; org.apache.xerces.util; org.apache.xerces.xni; org.apache.xerces.xni.parser; org.osgi.framework;</replacevalue>
-						</replace>
-					</then>
-				</if>
-
-				<replace file="${app.server.dir}/conf/tomcat6-server.xml">
-					<replacetoken><![CDATA[redirectPort="8443" />]]></replacetoken>
-					<replacevalue><![CDATA[redirectPort="8443" URIEncoding="UTF-8" />]]></replacevalue>
-				</replace>
-
-				<replace file="${app.server.dir}/conf/tomcat6-server.xml">
-					<replacetoken><![CDATA[redirectPort="9043" />]]></replacetoken>
-					<replacevalue><![CDATA[redirectPort="9043" URIEncoding="UTF-8" />]]></replacevalue>
-				</replace>
-
 				<delete>
 					<fileset
 						dir="${app.server.lib.portal.dir}"
@@ -593,51 +276,6 @@ set JAVA_OPTS=-Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Djonas.felix
 		<if>
 			<equals arg1="${app.server.type}" arg2="resin" />
 			<then>
-				<if>
-					<not>
-						<available file="${app.server.bin.dir}/run.bat" />
-					</not>
-					<then>
-						<copy
-							file="tools/servers/resin/bin/run.bat"
-							tofile="${app.server.bin.dir}/run.bat"
-						/>
-					</then>
-				</if>
-
-				<if>
-					<not>
-						<available file="${app.server.bin.dir}/run.sh" />
-					</not>
-					<then>
-						<copy
-							file="tools/servers/resin/bin/run.sh"
-							tofile="${app.server.bin.dir}/run.sh"
-						/>
-
-						<chmod
-							file="${app.server.bin.dir}/run.sh"
-							perm="a+x"
-						/>
-					</then>
-				</if>
-
-				<loadfile property="resin.properties.content" srcfile="${app.server.dir}/conf/resin.properties" />
-
-				<antelope:stringutil string="${resin.properties.content}" property="resin.properties.content.index">
-					<indexof string="-Dfile.encoding=UTF-8" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${resin.properties.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.dir}/conf/resin.properties">
-							<replacetoken><![CDATA[# jvm_args  : -Xmx2048m -XX:MaxPermSize=256m]]></replacetoken>
-							<replacevalue><![CDATA[jvm_args  : -Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true -Duser.timezone=GMT -Xmx1024m -XX:MaxPermSize=256m]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-
 				<copy todir="${app.server.lib.global.dir}">
 					<fileset
 						dir="lib/development"
@@ -651,40 +289,6 @@ set JAVA_OPTS=-Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Djonas.felix
 			<equals arg1="${app.server.type}" arg2="tomcat" />
 			<then>
 				<if>
-					<or>
-						<isset property="jdk.windows.version" />
-						<not>
-							<available file="${app.server.bin.dir}/setenv.bat" />
-						</not>
-					</or>
-					<then>
-						<copy
-							file="tools/servers/tomcat/bin/setenv.bat"
-							tofile="${app.server.bin.dir}/setenv.bat"
-						>
-							<filterset>
-								<filter token="java.version" value="${jdk.windows.version}" />
-							</filterset>
-						</copy>
-					</then>
-				</if>
-
-				<if>
-					<or>
-						<isset property="jdk.windows.version" />
-						<not>
-							<available file="${app.server.bin.dir}/setenv.sh" />
-						</not>
-					</or>
-					<then>
-						<copy
-							file="tools/servers/tomcat/bin/setenv.sh"
-							tofile="${app.server.bin.dir}/setenv.sh"
-						/>
-					</then>
-				</if>
-
-				<if>
 					<not>
 						<available file="${app.server.dir}/conf/Catalina/localhost/${app.server.tomcat.portal.context}.xml" />
 					</not>
@@ -694,46 +298,6 @@ set JAVA_OPTS=-Dfile.encoding=UTF8 -Djava.net.preferIPv4Stack=true -Djonas.felix
 							tofile="${app.server.dir}/conf/Catalina/localhost/${app.server.tomcat.portal.context}.xml"
 							overwrite="true"
 						/>
-					</then>
-				</if>
-
-				<loadfile property="catalina.properties.content" srcfile="${app.server.dir}/conf/catalina.properties" />
-
-				<antelope:stringutil string="${catalina.properties.content}" property="catalina.properties.content.index">
-					<indexof string=",${catalina.home}/lib/ext/*.jar" fromindex="0" />
-				</antelope:stringutil>
-
-				<if>
-					<equals arg1="${catalina.properties.content.index}" arg2="-1" />
-					<then>
-						<replace file="${app.server.dir}/conf/catalina.properties">
-							<replacetoken><![CDATA[common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar]]></replacetoken>
-							<replacevalue><![CDATA[common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar,${catalina.home}/lib/ext,${catalina.home}/lib/ext/*.jar]]></replacevalue>
-						</replace>
-					</then>
-				</if>
-
-				<replace file="${app.server.dir}/conf/server.xml">
-					<replacetoken><![CDATA[redirectPort="8443" />]]></replacetoken>
-					<replacevalue><![CDATA[redirectPort="8443" URIEncoding="UTF-8" />]]></replacevalue>
-				</replace>
-
-				<!--<replace file="${app.server.dir}/conf/server.xml">
-					<replacetoken><![CDATA[xmlValidation="false" xmlNamespaceAware="false">]]></replacetoken>
-					<replacevalue><![CDATA[xmlValidation="false" xmlNamespaceAware="false" deployXML="false">]]></replacevalue>
-				</replace>-->
-
-				<if>
-					<and>
-						<available file="${jdk.windows.home}/jre/bin/java.exe" />
-						<not>
-							<available file="${app.server.dir}/jre${jdk.windows.version}/win" />
-						</not>
-					</and>
-					<then>
-						<copy todir="${app.server.dir}/jre${jdk.windows.version}/win">
-							<fileset dir="${jdk.windows.home}/jre" />
-						</copy>
 					</then>
 				</if>
 
